--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "vue-loader": "^17.0.1"
     },
     "dependencies": {
-        "vue": "^3.2.36"
+        "sweetalert2": "^11.7.3",
+        "vue": "^3.2.36",
+        "vue-router": "^4.1.6"
     }
 }
